feat(routers): Добавить ручки из миро
Добавлены методы из миро
