# back/handlers/__init__.py
@@ -4,6 +4,6 @@ from .task_handlers import router as task_router
 from .assignment_handlers import router as assignment_router
 
 router = APIRouter()
-router.include_router(user_router, prefix="/users", tags=["Users"])
-router.include_router(task_router, prefix="/tasks", tags=["Tasks"])
-router.include_router(assignment_router, prefix="/assignments", tags=["Assignments"])
+router.include_router(user_router, prefix="/users", tags=["users"])
+router.include_router(task_router, prefix="/tasks", tags=["tasks"])
+router.include_router(assignment_router, prefix="/assignments", tags=["assignments"])
