# back/schemas/assignment.py
@@ -1,4 +1,4 @@
-from pydantic import BaseModel
+from pydantic import BaseModel, validator
 from datetime import datetime
 from typing import Optional
 
@@ -10,11 +10,23 @@ class AssignmentBase(BaseModel):
     error_message: Optional[str] = None
     assignment_file: Optional[str] = None
 
+    @validator('status')
+    def validate_status(cls, v):
+        if v is None:
+            return v
+        allowed_statuses = ["ok", "error"]
+        if v.lower() not in allowed_statuses:
+            raise ValueError(f'Invalid status for assignment: {v}. Must be one of {allowed_statuses}')
+        return v
+    
+    class Config:
+        orm_mode = True
+
 class AssignmentCreate(AssignmentBase):
     pass
 
 class Assignment(AssignmentBase):
-    assignment_id: int
+    # assignment_id: int
     timestamp: datetime
 
     class Config:
